--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>Game UI Shell v15 (rect buttons, desc tap, blue armor)</title>
+  <title>Game UI Shell - large text mobile</title>
   <style>
     :root {
+      /* phone layout */
       --max-phone-width: 420px;
-      --top-height: 10vh;
-      --inventory-height: 10vh;
-      --bottom-height: 9vh;
+      --top-height: 11vh;          /* a touch taller so bigger text fits */
+      --inventory-height: 12vh;    /* bigger touch targets */
+      --bottom-height: 11vh;       /* bigger A/B buttons */
 
       --border-radius-lg: 24px;
-      --border-radius-md: 12px;
+      --border-radius-md: 16px;
 
       --bg-page-start: #11182a;
       --bg-page-end: #05080f;
@@ -22,25 +23,26 @@
       --panel-bg-start: rgba(40,56,84,0.55);
       --panel-bg-end: rgba(10,15,27,0.4);
       --panel-border: rgba(255,255,255,0.12);
-      --panel-inner-glow: rgba(255,255,255,0.07);
 
       --slot-bg-start: rgba(180,192,212,0.16);
       --slot-bg-end: rgba(30,41,68,0.55);
-      --slot-border: rgba(255,255,255,0.22);
 
       --text-primary: #fff;
       --text-dim: rgba(255,255,255,0.7);
 
-      /* top resource glow colors */
-      --resource-card-shadow-gold: rgba(251, 191, 36, 0.4);
-      --resource-card-shadow-magic: rgba(14,165,233,0.45);
-      --resource-card-shadow-grace: rgba(168,85,247,0.45);
-
-      /* bottom button gradients */
       --btn-pink-start: #ff4f9a;
       --btn-pink-end: #a50062;
       --btn-purple-start: #8240ff;
       --btn-purple-end: #3a0075;
+
+      /* type scale (bigger everywhere) */
+      --fs-xxs: 0.8rem;
+      --fs-xs: 0.9rem;
+      --fs-sm: 1rem;
+      --fs-md: 1.1rem;
+      --fs-lg: 1.25rem;
+      --fs-xl: 1.5rem;
+      --fs-xxl: 2.25rem;
     }
 
     * {
@@ -67,9 +69,7 @@
       border-radius: var(--border-radius-lg);
       overflow: hidden;
       border: 1px solid rgba(255,255,255,0.18);
-      box-shadow: 0 40px 120px rgba(0,0,0,0.85),
-                  0 0 120px rgba(14,165,233,0.12),
-                  0 0 240px rgba(168,85,247,0.06);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.8);
       display: flex;
       flex-direction: column;
       position: relative;
@@ -85,7 +85,7 @@
       gap: 12px;
       align-items: end;
       text-align: center;
-      padding: calc(env(safe-area-inset-top) + 10px) 16px 10px;
+      padding: calc(env(safe-area-inset-top) + 12px) 16px 12px;
     }
 
     .resource-card {
@@ -96,27 +96,8 @@
       background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.07) 0%, rgba(0,0,0,0) 70%);
       border: 1px solid rgba(255,255,255,0.16);
       border-radius: var(--border-radius-md);
-      padding: 8px 6px;
-      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
-                  0 1px 2px rgba(255,255,255,0.12) inset;
-    }
-
-    .resource-card.gold {
-      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
-                  0 1px 2px rgba(255,255,255,0.12) inset,
-                  0 0 24px var(--resource-card-shadow-gold);
-    }
-
-    .resource-card.magic {
-      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
-                  0 1px 2px rgba(255,255,255,0.12) inset,
-                  0 0 24px var(--resource-card-shadow-magic);
-    }
-
-    .resource-card.grace {
-      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
-                  0 1px 2px rgba(255,255,255,0.12) inset,
-                  0 0 24px var(--resource-card-shadow-grace);
+      padding: 10px 8px;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.8) inset;
     }
 
     .resource-main-row {
@@ -124,13 +105,20 @@
       align-items: baseline;
       gap: 6px;
       font-weight: 600;
-      font-size: 1rem;
+      font-size: var(--fs-md); /* bigger numbers */
+      line-height: 1.1;
+    }
+
+    .resource-main-row span {
+      line-height: 1.1;
     }
 
     .resource-label {
-      font-size: 0.7rem;
+      font-size: var(--fs-xxs);
       font-weight: 500;
       color: var(--text-dim);
+      margin-top: 4px;
+      line-height: 1.2;
     }
 
     /* MIDDLE / PLAY AREA */
@@ -140,38 +128,40 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding-top: 6px;
+      padding-top: 10px;
       background: radial-gradient(circle at 50% 35%, rgba(180,192,212,0.22) 0%, rgba(0,0,0,0) 60%),
                   radial-gradient(circle at 50% 50%, #2a2a44 0%, #000 80%);
       position: relative;
     }
 
+    /* meters */
     .meters-area {
       width: calc(100% - 32px);
-      max-width: 320px;
-      margin-top: 0;
+      max-width: 360px; /* allow more width */
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 12px;       /* more breathing room */
     }
 
     .meter-block {
       display: flex;
       flex-direction: column;
-      gap: 4px;
+      gap: 6px;
     }
 
     .meter-label-row {
       display: flex;
       justify-content: space-between;
-      font-size: 0.7rem;
-      color: rgba(255,255,255,0.85);
+      font-size: var(--fs-sm);
+      line-height: 1.2;
+      color: rgba(255,255,255,0.9);
+      font-weight: 600;
     }
 
     .meter-bar-outer {
       width: 100%;
-      height: 10px;
-      border-radius: 4px;
+      height: 14px; /* taller bar */
+      border-radius: 6px;
       background: rgba(20,30,55,0.8);
       border: 1px solid rgba(255,255,255,0.22);
       overflow: hidden;
@@ -179,61 +169,119 @@
 
     .meter-bar-inner {
       height: 100%;
-      box-shadow: 0 0 12px rgba(255,255,255,0.4);
     }
 
-    /* HP: red */
     .meter-bar-inner.hp {
       background: linear-gradient(to right, #dc2626 0%, #f87171 100%);
       width: 50%;
     }
 
-    /* ARMOR: blue */
     .meter-bar-inner.armor {
       background: linear-gradient(to right, #0ea5e9 0%, #60a5fa 100%);
       width: 50%;
     }
 
-    /* DESCRIPTION BOX / LOG */
+    /* EMOJI BATTLE HUD */
+    .battle-wrapper {
+      margin-top: 16px;
+      width: calc(100% - 32px);
+      max-width: 360px;
+      border: 1px solid rgba(255,255,255,0.22);
+      border-radius: 16px;
+      background: rgba(10,15,27,0.5);
+      display: grid;
+      grid-template-columns: 1fr auto 1fr;
+      row-gap: 12px;
+      align-items: center;
+      padding: 16px;
+      color: var(--text-primary);
+    }
+
+    .battle-side {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      min-width: 0;
+    }
+
+    .fighter-emoji {
+      font-size: var(--fs-xxl); /* giant emoji */
+      line-height: 1;
+    }
+
+    .fighter-name {
+      font-size: var(--fs-sm);
+      font-weight: 600;
+      color: var(--text-primary);
+      margin-top: 6px;
+      line-height: 1.2;
+    }
+
+    .fighter-stats {
+      font-size: var(--fs-xxs);
+      color: var(--text-dim);
+      margin-top: 4px;
+      line-height: 1.3;
+      font-weight: 500;
+    }
+
+    .vs-col {
+      padding: 0 10px;
+      text-align: center;
+      font-weight: 700;
+      font-size: var(--fs-sm);
+      line-height: 1;
+      color: #fff;
+    }
+
+    .battle-log {
+      grid-column: 1 / span 3;
+      border-top: 1px solid rgba(255,255,255,0.22);
+      padding-top: 10px;
+      font-size: var(--fs-xs);
+      color: var(--text-dim);
+      text-align: center;
+      line-height: 1.4;
+      min-height: 2.5em;
+    }
+
+    /* DESCRIPTION BOX / ITEM INSPECT */
     .description-box {
       position: absolute;
       left: 0;
       right: 0;
-      bottom: var(--inventory-height); /* sits above inventory */
-
+      bottom: var(--inventory-height);
       background: radial-gradient(circle at 50% 0%, rgba(20,30,55,0.8) 0%, rgba(0,0,0,0.4) 70%);
       border: 1px solid rgba(255,255,255,0.2);
       border-radius: 0;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.8),
-                  0 1px 2px rgba(255,255,255,0.12) inset;
-      padding: 10px 14px;
-      min-height: 60px;
-      max-height: 80px;
-      font-size: 0.75rem;
-      line-height: 1.2;
+      box-shadow: none;
+      padding: 14px 16px;
+      min-height: 80px;
+      max-height: 100px;
       color: var(--text-primary);
       display: flex;
       flex-direction: column;
       justify-content: center;
-      pointer-events: none; /* only items are tappable */
+      pointer-events: none;
     }
 
     .description-title {
-      font-size: 0.65rem;
+      font-size: var(--fs-xs);
       font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 0.05em;
       color: var(--text-dim);
-      margin-bottom: 2px;
+      margin-bottom: 4px;
+      line-height: 1.2;
     }
 
     .description-body {
-      font-size: 0.7rem;
+      font-size: var(--fs-sm);
       color: var(--text-primary);
-      opacity: 0.9;
-      white-space: nowrap;
+      line-height: 1.4;
+      max-height: 3.6em;
       overflow: hidden;
-      text-overflow: ellipsis;
     }
 
     /* INVENTORY / EQUIPMENT */
@@ -245,32 +293,32 @@
       align-items: center;
       position: relative;
       z-index: 2;
+      padding: 8px 0;
+      gap: 4px;
     }
 
     .slot {
-      width: 56px;
-      height: 56px;
+      width: 64px;
+      height: 64px;
       background: radial-gradient(circle at 50% 0%, var(--slot-bg-start) 0%, var(--slot-bg-end) 70%);
-      border: 2px solid rgba(255,255,255,0.7); /* thicker, brighter border */
-      border-radius: 10px;
+      border: 3px solid rgba(255,255,255,0.7);
+      border-radius: 12px;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 1.5rem;
+      font-size: var(--fs-xl); /* bigger emoji */
+      line-height: 1;
       color: #fff;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.75),
-                  0 1px 2px rgba(255,255,255,0.22) inset,
-                  0 0 12px rgba(255,255,255,0.5);
+      box-shadow: none;
       user-select: none;
       cursor: pointer;
     }
 
     .slot.active {
-      outline: 2px solid #fff;
-      outline-offset: 2px;
+      outline: 3px solid #fff;
+      outline-offset: 3px;
     }
 
-    /* overrides for specific equipment slots */
     .slot.dagger,
     .slot.shield {
       background: linear-gradient(145deg, #1e3a8a 0%, #3b82f6 100%);
@@ -291,25 +339,23 @@
       display: flex;
       justify-content: center;
       align-items: stretch;
-      padding: 6px 12px;
+      padding: 10px 16px;
     }
 
     .buttons-area {
       display: flex;
-      gap: 12px;
+      gap: 16px;
       align-items: stretch;
       width: 100%;
-      max-width: 360px;
+      max-width: 400px;
     }
 
-    /* WIDE RECT BUTTONS */
     .action-btn {
       flex: 1 1 0%;
-      border-radius: 10px;
+      border-radius: 14px;
       background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.18) 0%, rgba(0,0,0,0) 70%);
-      border: 1px solid rgba(255,255,255,0.24);
-      box-shadow: 0 14px 28px rgba(0,0,0,0.8),
-                  0 2px 4px rgba(255,255,255,0.18) inset;
+      border: 2px solid rgba(255,255,255,0.24);
+      box-shadow: none;
       user-select: none;
       touch-action: manipulation;
       -webkit-user-select: none;
@@ -317,42 +363,42 @@
       cursor: pointer;
       position: relative;
       overflow: hidden;
-      min-height: 56px;
+      min-height: 68px; /* bigger touch target */
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    /* A button gradient */
     .action-btn.primary::before {
       content: "";
       position: absolute;
       inset: 0;
       border-radius: inherit;
       background: radial-gradient(circle at 50% 0%, var(--btn-pink-start) 0%, var(--btn-pink-end) 80%);
-      box-shadow: 0 0 48px rgba(255, 20, 147, 0.6);
+      box-shadow: none;
       z-index: 0;
     }
 
-    /* B button gradient */
     .action-btn.secondary::before {
       content: "";
       position: absolute;
       inset: 0;
       border-radius: inherit;
       background: radial-gradient(circle at 50% 0%, var(--btn-purple-start) 0%, var(--btn-purple-end) 80%);
-      box-shadow: 0 0 64px rgba(168,85,247,0.6);
+      box-shadow: none;
       z-index: 0;
     }
 
     .btn-label {
       position: relative;
       z-index: 1;
-      font-size: 0.8rem;
-      font-weight: 600;
+      font-size: var(--fs-lg); /* bigger label */
+      font-weight: 700;
       color: #fff;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.8);
+      line-height: 1;
+      text-shadow: none;
       pointer-events: none;
+      letter-spacing: 0.03em;
     }
 
     .action-btn:active {
@@ -364,15 +410,15 @@
   <main class="device">
     <!-- TOP RESOURCES -->
     <header class="top-section">
-      <div class="resource-card gold">
+      <div class="resource-card">
         <div class="resource-main-row">💰 <span>1,234</span></div>
         <div class="resource-label">Gold</div>
       </div>
-      <div class="resource-card magic">
+      <div class="resource-card">
         <div class="resource-main-row">✨ <span>56</span></div>
         <div class="resource-label">Magic</div>
       </div>
-      <div class="resource-card grace">
+      <div class="resource-card">
         <div class="resource-main-row">🕊️ <span>12</span></div>
         <div class="resource-label">Grace</div>
       </div>
@@ -392,7 +438,23 @@
         </div>
       </section>
 
-      <!-- full-width description box just above inventory -->
+      <!-- SIMPLE EMOJI BATTLE HUD -->
+      <section class="battle-wrapper">
+        <div class="battle-side left">
+          <div class="fighter-emoji">🧙‍♂️</div>
+          <div class="fighter-name">You</div>
+          <div class="fighter-stats">HP 5/10 • ARM 5</div>
+        </div>
+        <div class="vs-col">VS</div>
+        <div class="battle-side right">
+          <div class="fighter-emoji">🐉</div>
+          <div class="fighter-name">Ancient Drake</div>
+          <div class="fighter-stats">HP 12/12 • ARM 2</div>
+        </div>
+        <div class="battle-log">The drake snarls and embers scatter across the stone floor...</div>
+      </section>
+
+      <!-- description box just above inventory -->
       <div class="description-box" id="descBox">
         <div class="description-title" id="descTitle">Encounter</div>
         <div class="description-body" id="descBody">Tap an item below to inspect it.</div>
@@ -417,22 +479,18 @@
   </main>
 
   <script>
-    // tap items -> update description box
+    // tap items -> update description panel
     const slots = document.querySelectorAll('.slot');
     const descTitle = document.getElementById('descTitle');
-    const descBody = document.getElementById('descBody');
+    const descBody  = document.getElementById('descBody');
 
     slots.forEach(slot => {
       slot.addEventListener('click', () => {
-        // visual active state
         slots.forEach(s => s.classList.remove('active'));
         slot.classList.add('active');
 
-        // update description panel
-        const title = slot.getAttribute('data-title') || 'Item';
-        const body = slot.getAttribute('data-desc') || '';
-        descTitle.textContent = title;
-        descBody.textContent = body;
+        descTitle.textContent = slot.getAttribute('data-title') || 'Item';
+        descBody.textContent  = slot.getAttribute('data-desc')  || '';
       });
     });
   </script>
