--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>Game UI Shell - large text mobile (fixed desc layout)</title>
+  <title>Game UI Shell - light roguelike skin</title>
   <style>
     :root {
       --max-phone-width: 420px;
@@ -13,37 +13,58 @@
       --inventory-height: 12vh;
       --bottom-height: 11vh;
 
-      --border-radius-lg: 24px;
-      --border-radius-md: 16px;
+      /* softer, lighter game palette */
+      --page-bg-start: #eceff6;
+      --page-bg-end: #cfd5e8;
 
-      --bg-page-start: #11182a;
-      --bg-page-end: #05080f;
-      --device-gradient-start: #1a253d;
-      --device-gradient-end: #0a0f1b;
+      --device-bg-start: #f8f9ff;
+      --device-bg-end: #dfe4f8;
 
-      --panel-bg-start: rgba(40,56,84,0.55);
-      --panel-bg-end: rgba(10,15,27,0.4);
-      --panel-border: rgba(255,255,255,0.12);
+      --panel-surface-start: rgba(255,255,255,0.9);
+      --panel-surface-end: rgba(220,227,255,0.75);
+      --panel-stroke: rgba(35,45,85,0.18);
 
-      --slot-bg-start: rgba(180,192,212,0.16);
-      --slot-bg-end: rgba(30,41,68,0.55);
+      --slot-bg-start: rgba(255,255,255,0.8);
+      --slot-bg-end: rgba(216,224,255,0.7);
 
-      --text-primary: #fff;
-      --text-dim: rgba(255,255,255,0.7);
+      --text-primary: #1a1e2f;
+      --text-dim: rgba(26,30,47,0.6);
+      --text-bright: #1a1e2f;
 
-      --btn-pink-start: #ff4f9a;
-      --btn-pink-end: #a50062;
-      --btn-purple-start: #8240ff;
-      --btn-purple-end: #3a0075;
+      --accent-red-start: #ff6b6b;
+      --accent-red-end: #ff9e9e;
+
+      --accent-blue-start: #4da9ff;
+      --accent-blue-end: #9fd2ff;
+
+      --btn-a-start: #ffd86b;
+      --btn-a-end: #ffb800;
+      --btn-b-start: #9c7bff;
+      --btn-b-end: #4f2fff;
+
+      --window-bg: radial-gradient(circle at 50% 40%, rgba(255,255,255,0.9) 0%, rgba(220,227,255,0.75) 70%);
+      --window-border: 2px solid rgba(26,30,47,0.35);
+      --window-shadow: 0 8px 24px rgba(26,30,47,0.18), 0 2px 0 rgba(255,255,255,0.8) inset;
+
+      --chip-bg: linear-gradient(145deg, rgba(255,255,255,0.7) 0%, rgba(198,207,255,0.6) 100%);
+      --chip-stroke: rgba(26,30,47,0.28);
+      --chip-shadow: 0 2px 0 rgba(255,255,255,0.8) inset, 0 4px 8px rgba(26,30,47,0.12);
+
+      --border-radius-card: 20px;
+      --border-radius-win: 18px;
+      --border-radius-slot: 14px;
+      --border-radius-btn: 16px;
 
       /* type scale */
-      --fs-xxs: 0.8rem;
-      --fs-xs: 0.9rem;
-      --fs-sm: 1rem;
-      --fs-md: 1.1rem;
-      --fs-lg: 1.25rem;
-      --fs-xl: 1.5rem;
-      --fs-xxl: 2.25rem;
+      --fs-xxs: 0.7rem;
+      --fs-xs: 0.8rem;
+      --fs-sm: 0.9rem;
+      --fs-md: 1rem;
+      --fs-lg: 1.1rem;
+      --fs-xl: 1.4rem;
+      --fs-xxl: 2.2rem;
+
+      --pixel-gap: 12px;
     }
 
     * {
@@ -53,52 +74,77 @@
 
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Inter', Roboto, sans-serif;
-      background: radial-gradient(circle at 50% 10%, var(--bg-page-start) 0%, var(--bg-page-end) 70%);
+      font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, Roboto, sans-serif;
+      background: radial-gradient(circle at 50% 20%, var(--page-bg-start) 0%, var(--page-bg-end) 70%);
       color: var(--text-primary);
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100dvh;
+      padding: 16px;
     }
 
+    /* phone shell - make it feel like a handheld console frame */
     .device {
+      position: relative;
       width: 100%;
       max-width: var(--max-phone-width);
       height: clamp(600px, 100dvh, 900px);
-      background: radial-gradient(circle at 50% 0%, var(--device-gradient-start) 0%, var(--device-gradient-end) 80%);
-      border-radius: var(--border-radius-lg);
+      background: radial-gradient(circle at 50% 0%, var(--device-bg-start) 0%, var(--device-bg-end) 70%);
+      border-radius: 28px;
+      border: 2px solid rgba(26,30,47,0.4);
+      box-shadow:
+        0 24px 60px rgba(26,30,47,0.28),
+        0 4px 0 rgba(255,255,255,0.8) inset,
+        0 -4px 0 rgba(26,30,47,0.12) inset;
       overflow: hidden;
-      border: 1px solid rgba(255,255,255,0.18);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.8);
       display: flex;
       flex-direction: column;
-      position: relative;
     }
 
-    /* TOP BAR */
+    /* decorative corner screws / rivets for game feel */
+    .device::before,
+    .device::after {
+      content: '';
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: radial-gradient(circle at 30% 30%, #fff 0%, #9aa4d8 40%, #1a1e2f 70%);
+      border-radius: 3px;
+      box-shadow: 0 2px 4px rgba(26,30,47,0.4);
+    }
+    .device::before {
+      top: 10px;
+      left: 10px;
+    }
+    .device::after {
+      bottom: 10px;
+      right: 10px;
+    }
+
+    /* =========================================================
+       TOP BAR: resources get "chips" instead of flat cards
+       ========================================================= */
     .top-section {
       flex: 0 0 var(--top-height);
-      background: radial-gradient(circle at 50% 0%, var(--panel-bg-start) 0%, var(--panel-bg-end) 80%);
-      border-bottom: 1px solid var(--panel-border);
       display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 12px;
+      grid-template-columns: repeat(3, 1fr);
       align-items: end;
-      text-align: center;
+      gap: var(--pixel-gap);
       padding: calc(env(safe-area-inset-top) + 12px) 16px 12px;
     }
 
     .resource-card {
+      background: var(--chip-bg);
+      border-radius: var(--border-radius-card);
+      padding: 10px 8px;
+      border: 2px solid var(--chip-stroke);
+      box-shadow: var(--chip-shadow);
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.07) 0%, rgba(0,0,0,0) 70%);
-      border: 1px solid rgba(255,255,255,0.16);
-      border-radius: var(--border-radius-md);
-      padding: 10px 8px;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.8) inset;
+      text-align: center;
+      min-height: 64px;
     }
 
     .resource-main-row {
@@ -108,21 +154,23 @@
       font-weight: 600;
       font-size: var(--fs-md);
       line-height: 1.1;
-    }
-
-    .resource-main-row span {
-      line-height: 1.1;
+      color: var(--text-bright);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
 
     .resource-label {
       font-size: var(--fs-xxs);
-      font-weight: 500;
+      font-weight: 600;
       color: var(--text-dim);
       margin-top: 4px;
       line-height: 1.2;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
     }
 
-    /* MIDDLE / PLAY AREA */
+    /* =========================================================
+       PLAY AREA
+       ========================================================= */
     .middle-section {
       flex: 1;
       display: flex;
@@ -130,15 +178,19 @@
       align-items: center;
       justify-content: flex-start;
       padding-top: 10px;
-      background: radial-gradient(circle at 50% 35%, rgba(180,192,212,0.22) 0%, rgba(0,0,0,0) 60%),
-                  radial-gradient(circle at 50% 50%, #2a2a44 0%, #000 80%);
+      padding-bottom: 8px;
       position: relative;
     }
 
-    /* meters */
-    .meters-area {
+    /* meters live in a mini "status window" */
+    .meters-window {
       width: calc(100% - 32px);
       max-width: 360px;
+      background: var(--window-bg);
+      border-radius: var(--border-radius-win);
+      border: var(--window-border);
+      box-shadow: var(--window-shadow);
+      padding: 12px 14px;
       display: flex;
       flex-direction: column;
       gap: 12px;
@@ -155,46 +207,55 @@
       justify-content: space-between;
       font-size: var(--fs-sm);
       line-height: 1.2;
-      color: rgba(255,255,255,0.9);
+      color: var(--text-primary);
       font-weight: 600;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.6);
     }
 
     .meter-bar-outer {
       width: 100%;
       height: 14px;
-      border-radius: 6px;
-      background: rgba(20,30,55,0.8);
-      border: 1px solid rgba(255,255,255,0.22);
+      border-radius: 7px;
+      background: rgba(26,30,47,0.08);
+      border: 2px solid rgba(26,30,47,0.4);
+      box-shadow:
+        0 2px 0 rgba(255,255,255,0.8) inset,
+        0 -2px 0 rgba(26,30,47,0.18) inset;
       overflow: hidden;
     }
 
     .meter-bar-inner {
       height: 100%;
+      border-radius: 4px;
+      box-shadow: 0 1px 2px rgba(26,30,47,0.4);
     }
 
     .meter-bar-inner.hp {
-      background: linear-gradient(to right, #dc2626 0%, #f87171 100%);
+      background: linear-gradient(to right, var(--accent-red-start) 0%, var(--accent-red-end) 100%);
       width: 50%;
     }
 
     .meter-bar-inner.armor {
-      background: linear-gradient(to right, #0ea5e9 0%, #60a5fa 100%);
+      background: linear-gradient(to right, var(--accent-blue-start) 0%, var(--accent-blue-end) 100%);
       width: 50%;
     }
 
-    /* EMOJI BATTLE HUD */
-    .battle-wrapper {
-      margin-top: 16px;
+    /* =========================================================
+       ENCOUNTER WINDOW / BATTLE HUD
+       ========================================================= */
+    .battle-window {
       width: calc(100% - 32px);
       max-width: 360px;
-      border: 1px solid rgba(255,255,255,0.22);
-      border-radius: 16px;
-      background: rgba(10,15,27,0.5);
+      margin-top: var(--pixel-gap);
+      background: var(--window-bg);
+      border-radius: var(--border-radius-win);
+      border: var(--window-border);
+      box-shadow: var(--window-shadow);
+      padding: 16px;
       display: grid;
       grid-template-columns: 1fr auto 1fr;
       row-gap: 12px;
       align-items: center;
-      padding: 16px;
       color: var(--text-primary);
     }
 
@@ -202,21 +263,23 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: center;
       min-width: 0;
+      text-align: center;
     }
 
     .fighter-emoji {
       font-size: var(--fs-xxl);
       line-height: 1;
+      filter: drop-shadow(0 3px 2px rgba(26,30,47,0.3));
     }
 
     .fighter-name {
       font-size: var(--fs-sm);
-      font-weight: 600;
+      font-weight: 700;
       color: var(--text-primary);
       margin-top: 6px;
       line-height: 1.2;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
 
     .fighter-stats {
@@ -224,40 +287,39 @@
       color: var(--text-dim);
       margin-top: 4px;
       line-height: 1.3;
-      font-weight: 500;
+      font-weight: 600;
     }
 
     .vs-col {
       padding: 0 10px;
       text-align: center;
-      font-weight: 700;
+      font-weight: 800;
       font-size: var(--fs-sm);
       line-height: 1;
-      color: #fff;
+      color: var(--text-primary);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
 
     .battle-log {
       grid-column: 1 / span 3;
-      border-top: 1px solid rgba(255,255,255,0.22);
+      border-top: 2px solid rgba(26,30,47,0.25);
       padding-top: 10px;
       font-size: var(--fs-xs);
       color: var(--text-dim);
       text-align: center;
       line-height: 1.4;
       min-height: 2.5em;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.6);
     }
 
-    /* DESCRIPTION BOX / ITEM INSPECT */
-    /*
-      Instead of absolutely positioning this box floating near the bottom of middle-section,
-      we now treat it as its own fixed-height band ABOVE the inventory.
-      - It's no longer absolute.
-      - We create a new wrapper `.lower-hud` that sits between middle-section and inventory-row.
-    */
+    /* =========================================================
+       LOWER HUD (description band)
+       ========================================================= */
     .lower-hud {
-      background: radial-gradient(circle at 50% 0%, rgba(20,30,55,0.8) 0%, rgba(0,0,0,0.4) 70%);
-      border-top: 1px solid rgba(255,255,255,0.2);
-      border-bottom: 1px solid rgba(255,255,255,0.2);
+      background: var(--window-bg);
+      border-top: var(--window-border);
+      border-bottom: var(--window-border);
+      box-shadow: var(--window-shadow);
       padding: 14px 16px;
       color: var(--text-primary);
       flex: 0 0 auto;
@@ -273,12 +335,13 @@
 
     .description-title {
       font-size: var(--fs-xs);
-      font-weight: 600;
+      font-weight: 700;
       text-transform: uppercase;
-      letter-spacing: 0.05em;
-      color: var(--text-dim);
+      letter-spacing: 0.08em;
+      color: var(--text-primary);
       margin-bottom: 4px;
       line-height: 1.2;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.8);
     }
 
     .description-body {
@@ -287,12 +350,15 @@
       line-height: 1.4;
       max-height: 3.6em;
       overflow: hidden;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.6);
     }
 
-    /* INVENTORY / EQUIPMENT */
+    /* =========================================================
+       INVENTORY STRIP
+       Style it like console slots => toy-like plastic chips
+       ========================================================= */
     .inventory-row {
       flex: 0 0 var(--inventory-height);
-      background: radial-gradient(circle at 50% 0%, rgba(40,56,84,0.4) 0%, rgba(10,15,27,0.18) 70%);
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -300,51 +366,66 @@
       z-index: 2;
       padding: 8px 0;
       gap: 4px;
+      background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.6) 0%, rgba(210,220,255,0.4) 70%);
+      border-top: var(--window-border);
+      border-bottom: var(--window-border);
+      box-shadow: var(--window-shadow);
     }
 
     .slot {
       width: 64px;
       height: 64px;
+      border-radius: var(--border-radius-slot);
       background: radial-gradient(circle at 50% 0%, var(--slot-bg-start) 0%, var(--slot-bg-end) 70%);
-      border: 3px solid rgba(255,255,255,0.7);
-      border-radius: 12px;
+      border: 2px solid rgba(26,30,47,0.45);
+      box-shadow:
+        0 2px 0 rgba(255,255,255,0.8) inset,
+        0 -2px 0 rgba(26,30,47,0.18) inset,
+        0 8px 16px rgba(26,30,47,0.2);
       display: flex;
       justify-content: center;
       align-items: center;
       font-size: var(--fs-xl);
       line-height: 1;
-      color: #fff;
-      box-shadow: none;
+      color: var(--text-primary);
       user-select: none;
       cursor: pointer;
+      position: relative;
     }
 
     .slot.active {
-      outline: 3px solid #fff;
+      outline: 3px solid #fff59e;
       outline-offset: 3px;
+      box-shadow:
+        0 0 12px rgba(255,255,150,0.9),
+        0 8px 16px rgba(26,30,47,0.3);
     }
 
-    .slot.dagger,
+    /* individual rarity / type tints like stickers */
+    .slot.dagger {
+      background: radial-gradient(circle at 50% 0%, #fff 0%, #ffe7c7 60%);
+    }
     .slot.shield {
-      background: linear-gradient(145deg, #1e3a8a 0%, #3b82f6 100%);
+      background: radial-gradient(circle at 50% 0%, #fff 0%, #d7ecff 60%);
     }
-
     .slot.diamond {
-      background: linear-gradient(145deg, #facc15 0%, #f59e0b 100%);
+      background: radial-gradient(circle at 50% 0%, #fff 0%, #fff5bd 60%);
     }
-
     .slot.poultry {
-      background: linear-gradient(145deg, #16a34a 0%, #4ade80 100%);
+      background: radial-gradient(circle at 50% 0%, #fff 0%, #d6ffd9 60%);
     }
 
-    /* BOTTOM CONTROLS */
+    /* =========================================================
+       BOTTOM CONTROLS
+       Buttons feel like handheld console face buttons
+       ========================================================= */
     .bottom-section {
       flex: 0 0 var(--bottom-height);
-      background: radial-gradient(circle at 50% 100%, var(--panel-bg-start) 0%, var(--panel-bg-end) 70%);
       display: flex;
       justify-content: center;
       align-items: stretch;
-      padding: 10px 16px;
+      padding: 10px 16px calc(env(safe-area-inset-bottom) + 12px);
+      background: radial-gradient(circle at 50% 100%, rgba(255,255,255,0.6) 0%, rgba(210,220,255,0.4) 70%);
     }
 
     .buttons-area {
@@ -357,53 +438,47 @@
 
     .action-btn {
       flex: 1 1 0%;
-      border-radius: 14px;
-      background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.18) 0%, rgba(0,0,0,0) 70%);
-      border: 2px solid rgba(255,255,255,0.24);
-      box-shadow: none;
+      position: relative;
+      min-height: 68px;
+      border-radius: var(--border-radius-btn);
+      border: 2px solid rgba(26,30,47,0.55);
+      box-shadow:
+        0 3px 0 rgba(255,255,255,0.8) inset,
+        0 -3px 0 rgba(26,30,47,0.3) inset,
+        0 12px 20px rgba(26,30,47,0.28);
       user-select: none;
       touch-action: manipulation;
       -webkit-user-select: none;
       appearance: none;
       cursor: pointer;
-      position: relative;
       overflow: hidden;
-      min-height: 68px;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    .action-btn.primary::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      border-radius: inherit;
-      background: radial-gradient(circle at 50% 0%, var(--btn-pink-start) 0%, var(--btn-pink-end) 80%);
-      box-shadow: none;
-      z-index: 0;
+    .action-btn.primary {
+      background: radial-gradient(circle at 50% 0%, var(--btn-a-start) 0%, var(--btn-a-end) 80%);
     }
 
-    .action-btn.secondary::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      border-radius: inherit;
-      background: radial-gradient(circle at 50% 0%, var(--btn-purple-start) 0%, var(--btn-purple-end) 80%);
-      box-shadow: none;
-      z-index: 0;
+    .action-btn.secondary {
+      background: radial-gradient(circle at 50% 0%, var(--btn-b-start) 0%, var(--btn-b-end) 80%);
+      color: #fff;
     }
 
     .btn-label {
-      position: relative;
-      z-index: 1;
       font-size: var(--fs-lg);
-      font-weight: 700;
-      color: #fff;
+      font-weight: 800;
       line-height: 1;
-      text-shadow: none;
-      pointer-events: none;
+      color: var(--text-primary);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.9), 0 2px 2px rgba(26,30,47,0.4);
       letter-spacing: 0.03em;
+      pointer-events: none;
+    }
+
+    .action-btn.secondary .btn-label {
+      color: #fff;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.6), 0 2px 2px rgba(26,30,47,0.8);
     }
 
     .action-btn:active {
@@ -431,7 +506,8 @@
 
     <!-- GAME / MIDDLE -->
     <section class="middle-section">
-      <section class="meters-area">
+      <!-- meters area in its own styled window -->
+      <section class="meters-window">
         <div class="meter-block">
           <div class="meter-label-row"><span>HP</span><span>5 / 10</span></div>
           <div class="meter-bar-outer"><div class="meter-bar-inner hp" id="hpBar"></div></div>
@@ -443,8 +519,8 @@
         </div>
       </section>
 
-      <!-- SIMPLE EMOJI BATTLE HUD -->
-      <section class="battle-wrapper">
+      <!-- ENCOUNTER / BATTLE HUD window -->
+      <section class="battle-window">
         <div class="battle-side left">
           <div class="fighter-emoji">🧙‍♂️</div>
           <div class="fighter-name">You</div>
@@ -460,7 +536,7 @@
       </section>
     </section>
 
-    <!-- DESCRIPTION HUD BAND (fixed position in layout, no overlap) -->
+    <!-- DESCRIPTION HUD BAND -->
     <section class="lower-hud">
       <div class="description-box" id="descBox">
         <div class="description-title" id="descTitle">Encounter</div>
